--- a/frontend/src/components/AboutUs/AboutUsAdult/AboutUsAdult.css
+++ b/frontend/src/components/AboutUs/AboutUsAdult/AboutUsAdult.css
@@ -4,7 +4,9 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 90vh;
+  width: 100%;
+  height: 100%;
+  min-height: 80vh;
 }
 .AboutUsAdult-Contend {
   display: grid; /* Cambiamos a grid */
@@ -58,4 +60,100 @@
 .AboutUAdults-Image img {
   margin-top: 46px;
   height: auto;
+}
+/* Media Query para pantallas grandes (1440px) */
+@media (max-width: 1440px) {
+  .AboutUsAdult-Contend {
+    width: 90%;
+    column-gap: 0px; /* Reducimos el gap para pantallas más grandes */
+    padding-left: 50px;
+  }
+
+  .AboutUsAdult-Title h1 {
+    font-size: 2.8rem; /* Reducimos ligeramente el tamaño del título */
+  }
+
+  .main-descriptionAdult {
+    font-size: 1.1rem;
+  }
+
+  .AboutUsAdult-Image {
+    width: 450px; /* Ajustamos el ancho de la imagen */
+    margin-right: 50px;
+  }
+}
+
+/* Media Query para pantallas medianas (768px) */
+@media (max-width: 768px) {
+  .AboutUsAdult {
+    background-size: cover;
+    height: auto; /* Dejar que el contenido ajuste la altura */
+  }
+
+  .AboutUsAdult-Contend {
+    grid-template-columns: 1fr; /* Cambiamos a una sola columna */
+    padding-left: 30px;
+    padding-right: 30px;
+    column-gap: 30px; /* Reducimos el espacio entre elementos */
+  }
+
+  .AboutUsAdult-Image {
+    grid-column: 1; /* Movemos la imagen debajo del contenido de texto */
+    grid-row: auto;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    width: 300px; /* Ajustamos el tamaño de la imagen */
+    margin-right: 300px;
+  }
+
+  .AboutUsAdult-Title h1 {
+    font-size: 2.4rem; /* Ajustamos el tamaño del título */
+  }
+
+  .subContendAdult {
+    width: 90%; /* Hacemos que el contenido ocupe un mayor espacio */
+    margin: 0 auto; /* Centrar en pantallas medianas */
+  }
+}
+
+/* Media Query para pantallas pequeñas (390px) */
+@media (max-width: 400px) {
+  .AboutUsAdult {
+    height: auto;
+    padding-top: 20px;
+  }
+
+  .AboutUsAdult-Contend {
+    grid-template-columns: 1fr;
+    padding-left: 20px;
+    padding-right: 20px;
+    column-gap: 20px; /* Reducimos más el espacio en pantallas pequeñas */
+  }
+.AboutUsAdult-Title{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start ;
+  text-align: left;
+}
+  .AboutUsAdult-Title h1 {
+    font-size: 1.5rem; /* Reducimos más el tamaño del título */
+    text-align: justify;
+  }
+
+  .main-descriptionAdult {
+    font-size: 0.9rem; /* Ajustamos el tamaño del texto */
+  }
+
+  .subContendAdult {
+    width: 55%; /* Ancho completo en pantallas pequeñas */
+    height: 50%;
+    margin: 0;
+  }
+
+  .AboutUsAdult-Image img {
+    width: 350px; /* Ajustamos el tamaño de la imagen */
+    margin-bottom: 30px;
+  }
+ 
 }
