--- a/frontend/src/components/Servis/ServisYoung/ServisYoung.css
+++ b/frontend/src/components/Servis/ServisYoung/ServisYoung.css
@@ -1,9 +1,9 @@
 .ServisYoung{
     background-image: url('../../images/Fondo-Servis.png');
-    background-size: 100% 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 110vh;
+    height: 100vh;
 }
 /* Estilos para el contenedor principal */
 .Servis-section {
@@ -39,19 +39,74 @@
     gap: 20px;
   }
   
-  /* Responsivo */
-  @media (max-width: 768px) {
-    .Servis-section {
-      grid-template-columns: 1fr;
-      text-align: center;
-    }
-  
-    .Servisleft-section {
-      text-align: center;
-    }
-  
-    .Servisright-section {
-      align-items: center;
-    }
+
+/* Responsivo para pantallas grandes (1440px) */
+@media (max-width: 1440px) {
+ 
+  .Servis-section {
+      grid-template-columns: 1fr 1fr;
+      gap: 30px;
+      padding: 40px;
   }
-  
+
+  .Servisleft-section h1 {
+      font-size: 2.2rem;
+  }
+
+  .phone-image {
+      max-width: 90%; /* Ajustamos el tamaño de la imagen */
+  }
+}
+
+/* Responsivo para pantallas medianas (768px) */
+@media (max-width: 768px) {
+  .ServisYoung{
+    height: 160vh;
+  }
+  .Servis-section {
+      grid-template-columns: 1fr; /* Una sola columna */
+      text-align: center;
+      padding: 30px;
+  }
+
+  .Servisleft-section {
+      text-align: center;
+  }
+
+  .Servisleft-section h1 {
+      font-size: 2rem;
+  }
+
+  .Servisright-section {
+      align-items: center;
+  }
+}
+
+/* Responsivo para pantallas pequeñas (390px) */
+@media (max-width: 400px) {
+  .ServisYoung{
+    height: 180vh;
+  }
+  .Servis-section {
+      grid-template-columns: 1fr; /* Una sola columna en móviles */
+      gap: 20px;
+      padding: 20px;
+  }
+
+  .Servisleft-section {
+      text-align: center;
+  }
+
+  .Servisleft-section h1 {
+      font-size: 1.8rem;
+  }
+
+  .Servisright-section {
+      gap: 15px; /* Reducimos el espacio entre las tarjetas de programas */
+      align-items: center;
+  }
+
+  .phone-image {
+      max-width: 80%; /* Reducimos el tamaño de la imagen en pantallas pequeñas */
+  }
+}
