--- a/frontend/src/components/UserProfile/Profile.css
+++ b/frontend/src/components/UserProfile/Profile.css
@@ -1,7 +1,18 @@
 .Profile-contend{
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.Profile-Photo{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.Profile-Photo img{
+    margin-top: 12rem;
+    width:10rem;
 }
 .Profile-info{
     margin-top: 12rem;
