--- a/frontend/src/components/UserProfile/Profile.css
+++ b/frontend/src/components/UserProfile/Profile.css
@@ -1,23 +1,167 @@
-.Profile-contend{
-    width: 100%;
-    height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.profile-contend{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+.data-contend{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid 2px rgba(170, 168, 168, 0.6);
+    border-radius: 2rem;
+    margin-top: 6rem;
+    margin-bottom: 5rem;
+    width: 80rem;
+    height: 40rem;
+    box-shadow:10px 10px 15px rgba(44, 44, 44, 0.6);
 }
 .Profile-Photo{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    margin-right: 4rem;
+    border-right: solid 1px rgb(103, 103, 103);
+
 }
 .Profile-Photo img{
-    margin-top: 12rem;
-    width:10rem;
+    height: 25rem;
+    width:22rem;
+    margin-right: 3rem;
 }
 .Profile-info{
-    margin-top: 12rem;
+    margin-left: 4rem;
+    margin-right: 8rem;
+}
+.Profile-info h1{
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    color: #06407e;
+    font-size: 2.5rem;
+}
+.Profile-info p{
+    font-family: "Poppins", serif;
+    color: black;
+    font-weight: bold;
+    font-size: 1.1rem;
 }
 
-.Profile-info p{
-    color: black;
+.Profile-info .dato{
+    font-family: "Montserrat Alternates", serif;
+    display: block; /* Esto hace que el dato quede debajo de la etiqueta */
+    padding-top: 0.5rem;
+    font-weight: normal;
+    font-size: 1rem;
+    color: #676d79;
+}
+/* Estilos para pantallas grandes (1440px) */
+@media (max-width: 1440px) {
+    .data-contend {
+        width: 70rem;
+        height: 40rem;
+        margin-top: 3rem;
+    }
+
+    .Profile-Photo img {
+        height: 25rem;
+        width: 24rem;
+    }
+
+    .Profile-info h1 {
+        font-size: 2.5rem;
+    }
+
+    .Profile-info p {
+        font-size: 1.2rem;
+    }
+
+    .Profile-info .dato {
+        font-size: 1.1rem;
+    }
+}
+
+/* Estilos para pantallas medianas (768px) */
+@media only screen and (max-width: 768px) {
+    .data-contend {
+        width: 35rem;
+        height: 50rem;
+        margin-top: 3rem;
+        flex-direction: column; /* Poner la imagen y los datos en columna */
+    }
+
+    .Profile-Photo {
+        margin-right: 0;
+        margin-left: 2rem;
+        margin-bottom: 2rem;
+        overflow: hidden; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 15rem;
+        width: 15rem;
+        border-right: none ;
+        border-radius: 50%;
+        border: solid 2px rgb(189, 188, 188);
+        /* box-shadow: 10px 10px 10px rgba(44, 44, 44, 0.3); */
+    }
+
+    .Profile-Photo img {
+        width: 22rem;
+        margin: 0;
+    }
+
+    .Profile-info {
+        text-align: center;
+        margin-right: 2rem;
+    }
+
+    .Profile-info h1 {
+        font-size: 2rem;
+    }
+
+    .Profile-info p {
+        font-size: 1rem;
+    }
+
+    .Profile-info .dato {
+        font-size: 0.9rem;
+    }
+}
+
+/* Estilos para pantallas pequeñas (400px o menos) */
+@media only screen and (max-width: 400px) {
+    .data-contend {
+        width: 20rem;
+        height: 40rem;
+        padding: 1rem;
+        margin-top: 3rem;
+        flex-direction: column;
+    }
+    .Profile-Photo{
+        margin-right: 0.8rem;
+        height: 10rem;
+        width: 10rem;        
+
+    }
+
+    .Profile-Photo img {
+       width: 15rem;
+    
+    }
+    .Profile-info{
+        margin-right: 3.5rem;
+    }
+
+    .Profile-info h1 {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    .Profile-info p {
+        font-size: 0.9rem;
+    }
+
+    .Profile-info .dato {
+        font-size: 0.8rem;
+    }
 }
